--- a/User-List-MP/User Page/UserPageViewController.xib
+++ b/User-List-MP/User Page/UserPageViewController.xib
@@ -7,11 +7,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserPageViewController" customModule="Users_Miho" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserPageViewController" customModule="User_List_MP" customModuleProvider="target">
             <connections>
                 <outlet property="blogLabel" destination="r0x-18-qiq" id="a8w-n3-sss"/>
                 <outlet property="companyLabel" destination="4OF-Qt-K6s" id="MAq-Bm-C4O"/>
-                <outlet property="followersButton" destination="P0l-UG-XLB" id="R3r-zO-BPP"/>
+                <outlet property="followersButton" destination="P0l-UG-XLB" id="d4i-WB-S4m"/>
                 <outlet property="followingButton" destination="Fwo-Oa-HDU" id="tzn-OU-iwl"/>
                 <outlet property="githubLabel" destination="hdT-iS-oEb" id="ncy-xK-zv0"/>
                 <outlet property="locationLabel" destination="gFr-Dx-6Hx" id="G5Z-Zr-jRp"/>
@@ -78,18 +78,21 @@
                                                         <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                                     </state>
                                                     <connections>
-                                                        <action selector="onTappedButtonFollowers:" destination="-1" eventType="touchUpInside" id="zL7-rP-mTZ"/>
+                                                        <action selector="onTappedButtonFollowing:" destination="-1" eventType="touchUpInside" id="BE9-Jo-g7h"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P0l-UG-XLB">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="P0l-UG-XLB">
                                                     <rect key="frame" x="192" y="0.0" width="190" height="50"/>
                                                     <color key="backgroundColor" red="0.094117647060000004" green="0.29803921570000003" blue="0.49803921569999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="iyk-qr-raH"/>
+                                                    </constraints>
                                                     <inset key="contentEdgeInsets" minX="2" minY="5" maxX="2" maxY="5"/>
                                                     <state key="normal" title="Button">
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </state>
                                                     <connections>
-                                                        <action selector="onTappedButtonFollowing:" destination="-1" eventType="touchUpInside" id="Rdh-o5-u8U"/>
+                                                        <action selector="onTappedButtonFollowers:" destination="-1" eventType="touchUpInside" id="NUU-gc-nia"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -256,7 +259,7 @@
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
-                        <action selector="onTappedSaveButton:" destination="-1" eventType="touchUpInside" id="7jS-v2-PPS"/>
+                        <action selector="onTappedSaveButton:" destination="-1" eventType="touchUpInside" id="xFw-AJ-Lf8"/>
                     </connections>
                 </button>
             </subviews>
